src/objects/Dairy_Cattle_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Efficient_Bucket_Feeding_Steps__c</fullName>
        <label>Effective Efficient Bucket Feeding Steps</label>
        <picklist>
            <picklistValues>
                <fullName>1. 3-4 liters of milk/day at 2-3 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. 4-5 liters of milk/day at 4-5 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. 5-6 liters of milk/day at 6-7 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. 4-5 liters of milk/dayat 8-9 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. 3-4 liters of milk/day at 10-11weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. 2-3 liters of milk/day at 12 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Endospec_Quantity_Given__c</fullName>
        <label>Endospec Quantity Given</label>
        <picklist>
            <picklistValues>
                <fullName>1.Less than 10ml to calves upto 50Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Give 10ml to calves upto 50Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Give 15ml to calves upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Give 20ml to calves upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Give 30ml to calves upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Give 30ml to calves upto 150kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Give 50-70ml to adults above 150Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Give 25ml to calves upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Give 20ml to heifer upto 200kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Give 30ml to heifer upto 250kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. Give 30ml to heifer upto 150kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. Give 40ml to adults above 150Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14. Not sure</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Engage_in_Other_Animal_Enterprise__c</fullName>
        <label>Engage in Other Animal Enterprise?</label>
        <picklist>
            <picklistValues>
                <fullName>1 Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engaged_in_Dairy_Farming_How_Long__c</fullName>
        <label>Engaged in Dairy Farming How Long?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. 2-6 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. 7-11 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. More than 11 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ensuring_Production_of_High_Quality_Milk__c</fullName>
        <label>Ensuring Production of High Quality Milk</label>
        <picklist>
            <picklistValues>
                <fullName>1. Milking twice a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Maintaining the time of milking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Maintain same milking person all time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Maintaining same clean milk containers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Avoid ill milkers/poor hygiene habits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Do gradual changes in milking process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Clean udder and teats before milking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Ensure milking from comfortable place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Ensure milking within 7-10 minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Ensure complete milking of milk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Keep only healthy milking cows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. Keep the environment clean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.Offer cow feeds before/after milking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Clean dry hands before milking a cow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15. Sieve milk collected &amp; recorded it</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>External_Parasites_that_attack_farm__c</fullName>
        <description>Which external parasites commonly attack your animals on the farm?</description>
        <inlineHelpText>Which external parasites commonly attack your animals on the farm?</inlineHelpText>
        <label>External Parasites that attack farm</label>
        <picklist>
            <picklistValues>
                <fullName>1. Flies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Ticks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. lice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. mites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 None of the above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 I am not sure</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Factors_driving_milk_production_trends__c</fullName>
        <label>Factors driving milk production trends</label>
        <picklist>
            <picklistValues>
                <fullName>1. Lack of access to quality feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Availability and access to feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Access to information on production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Lack of production Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Availability of Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Availability of Labour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Drought</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Floods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Poor quality Breeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.Lack of capital/financial constraints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Poor weather conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. Labour unavailability/affordability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.Access to improved pasture seeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14. Favourable weather condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15. Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Factors_in_Deciding_to_do_Dairy_Farming__c</fullName>
        <label>Factors in Deciding to do Dairy Farming</label>
        <picklist>
            <picklistValues>
                <fullName>1. Land availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Start up capital/financial resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Improved dairy breeds available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Knowledge about dairy farming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Profitability of dairy enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Maturity period of the breeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Resistance to animal diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Availability of feeds and clean water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Availability of cheaper labour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Maintenance cost of the enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. Demand for milk in the area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. Need for bio gas energy source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Need for manure/fertilizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Demand for milk in the area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15. Need for manure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16. Need for bio gas energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 Easy of pasture management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18. Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Feeding_of_Calves_upto_Weaning__c</fullName>
        <label>Feeding of Calves upto Weaning (3 month)</label>
        <picklist>
            <picklistValues>
                <fullName>1. Bucket feeding upto weening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Natural feeding upto weani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Feeding on replacement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fertilizers_applied_on_dairy_farm__c</fullName>
        <description>Which fertilizers do you apply on your dairy farm?</description>
        <inlineHelpText>Which fertilizers do you apply on your dairy farm?</inlineHelpText>
        <label>Fertilizers applied on dairy farm</label>
        <picklist>
            <picklistValues>
                <fullName>1. Apply only manure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Both manure &amp; artificial fertilizers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Apply artificial fertilizers only</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>Person__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_how_long_is_the_milk_stored__c</fullName>
        <label>For how long is the milk stored?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_in_which_Milk_is_Sold__c</fullName>
        <label>Form in which Milk is Sold</label>
        <picklist>
            <picklistValues>
                <fullName>1. Just sell fresh milk after milking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Ghee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Yorghut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Butter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Cheese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Boil it and then sell it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Sour fermented milk</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Watering_Dairy_Animals__c</fullName>
        <label>Frequency of Watering Dairy Animals</label>
        <picklist>
            <picklistValues>
                <fullName>1. Once a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Twice a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Thrice a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Four times a day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. All the time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c + &apos; &apos; +  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_symptoms_of_worm_infection__c</fullName>
        <label>General symptoms of worm infection</label>
        <picklist>
            <picklistValues>
                <fullName>1. Swollen abdomen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Rough hair coat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.More Coughing (in morning and evening)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Running nose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Loss of appetite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Loss of weight (body condition)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Labored/difficult in breathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Diarrhea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Grow_Any_Crop__c</fullName>
        <label>Grow Any Crop?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Had_Pregnant_Dairy_Cow_last_2_years__c</fullName>
        <label>Had Pregnant Dairy Cow last 2 years</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Had_any_milking_cow_last_2_years__c</fullName>
        <label>Had any milking cow last 2 years</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Had_milking_dairy_cows__c</fullName>
        <label>Had any milking dairy cows last 12 month</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Had_newly_born_calf_last_2_years__c</fullName>
        <label>Had newly born calf last 2 years</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_a_Personal_Phone_Number__c</fullName>
        <label>Have a Personal Phone Number?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_any_common_calf_diseases_in_area__c</fullName>
        <label>Have any common calf diseases in area?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_contract_to_sell_milk_to_same_buyer__c</fullName>
        <description>Do you have a contract to sell milk regularly to the same buyer?</description>
        <inlineHelpText>Do you have a contract to sell milk regularly to the same buyer?</inlineHelpText>
        <label>Have contract to sell milk to same buyer</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Not sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_other_contact_number__c</fullName>
        <label>Have other contact number?</label>
        <picklist>
            <picklistValues>
                <fullName>1. No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Yes my husband/wife phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. yes my children phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Yes another relative’s phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Artificial_Insemination_was_paid_for__c</fullName>
        <label>How Artificial Insemination was paid for</label>
        <picklist>
            <picklistValues>
                <fullName>1.Given free by a friend/relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Free from private organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Purchased with money I already had</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Purchased on credit from the seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Used the money borrowed from friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Purchased with money from a loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Received from government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Used money borrowed from relatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_Cow_Handled_just_After_Calving__c</fullName>
        <label>How Cow Handled just After Calving</label>
        <picklist>
            <picklistValues>
                <fullName>1. Provide clean water all time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Provide quality feeds/fodder all time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Check cow for damage after birth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Bum/bury the afterbirth immediately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Consult a vet if no afterbirth by day1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Ensure good hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I leave dam to recover by herself</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8Consult vet if cow fail standing in3hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_Dairy_Cattle_Were_Obtained__c</fullName>
        <label>How Dairy Cattle Were Obtained</label>
        <picklist>
            <picklistValues>
                <fullName>1.Used money borrowed from friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Received from friend or relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Given by private organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Given by government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. For free from private organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Purchased on credit from the seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Purchased with money I already had</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Used money from a formal loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9Used money borrowed from relatives</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_Treat_Cattle_Against_Disease_on_Farm__c</fullName>
        <label>How Treat Cattle Against Disease on Farm</label>
        <picklist>
            <picklistValues>
                <fullName>1.Contact a Vet doctor to give treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.I treat using recommended drugs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Ensuring good housing &amp; ventilation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Ensure proper manure disposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Provision quality feeding containers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Isolation of sick animals &amp; newcomers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Proper disposal of dead animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Proper disinfection of animal units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. I treat using local technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Ensuring good hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. Provision of clean water containers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.Established a footbath at farm entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_calf_handled_immediately_after_birth__c</fullName>
        <label>How calf handled immediately after birth</label>
        <picklist>
            <picklistValues>
                <fullName>1. Remove any fluids from nose and mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Check heartbeat and ensure breathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Allow the cow to lick calf within 1 h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.If not licked,rub with soft materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Ensure good hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Allow the calf to suckle within first</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Rub cord with clean sharp knife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Dip umbilical cord in iodine solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_dairy_cattle_fed_from_3_months__c</fullName>
        <description>In the past 1 year, how do you feed the dairy cattle from 3months (peak) up to the end of the milking season?</description>
        <inlineHelpText>In the past 1 year, how do you feed the dairy cattle from 3months (peak) up to the end of the milking season?</inlineHelpText>
        <label>How dairy cattle fed from 3 months</label>
        <picklist>
            <picklistValues>
                <fullName>1. Add supplements to feeds at 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Feed on good quality forage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Provide mixed feeds/concentrates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Mix urea in dry grass before feeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Add Super glow/DI in animal feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.None of the above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_dairy_cattle_fed_from_birth__c</fullName>
        <description>In the past 1 year, How do you feed the dairy cattle from first day of birth upto the middle of the milking season (3 months)?</description>
        <inlineHelpText>In the past 1 year, How do you feed the dairy cattle from first day of birth upto the middle of the milking season (3 months)?</inlineHelpText>
        <label>How dairy cattle fed from birth</label>
        <picklist>
            <picklistValues>
                <fullName>1 Fed on good quality forage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Fed on 2-8kg/day in first week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Provide clean water all the time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Mix urea in dry grass before feeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Add Super glow/DI in animal feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 None of the above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_do_you_plant_your_pastures__c</fullName>
        <description>How do you plant your pastures?</description>
        <inlineHelpText>How do you plant your pastures?</inlineHelpText>
        <label>How do you plant your pastures?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Plant mixture of grasses and legumes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Plant legume pastures only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Plant grasses only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_feed_manage_pregnant_dairy_cow__c</fullName>
        <description>How do you feed and manage YOUR pregnant dairy cow?</description>
        <inlineHelpText>How do you feed and manage YOUR pregnant dairy cow?</inlineHelpText>
        <label>How feed &amp; manage pregnant dairy cow</label>
        <picklist>
            <picklistValues>
                <fullName>1 Feed on good quality pastures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Supplement with concentrates daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Provide clean water all the time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Mix urea in dry grass before feeding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Add Super glow/DI in animal feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Ensure good hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_heifer_is_fed_from_6_18_months__c</fullName>
        <description>How do you feed your heifer from 6-18 months?</description>
        <inlineHelpText>How do you feed your heifer from 6-18 months?</inlineHelpText>
        <label>How heifer is fed from 6-18 months</label>
        <picklist>
            <picklistValues>
                <fullName>1.Provide 1Kg concentrates from 6 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Provide quality fodder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Avoid poor pastures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Providing clean water at all time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Provide mineral lick at all times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Provide with peelings/crop residues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>